--- a/main_SignIn.html
+++ b/main_SignIn.html
@@ -83,7 +83,7 @@
 					function check(form)/*function to check userid & password*/
 					{
 					 /*the following code checkes whether the entered userid and password are matching*/
-					 if(form.userid.value == "admin" && form.pswrd.value == "admin")
+					 if(form.userid.value == "user" && form.pswrd.value == "user")
 					  {
 						window.open('target.html')/*opens the target page while Id & password matches*/
 					  }
