--- a/main_SignIn.html
+++ b/main_SignIn.html
@@ -89,7 +89,7 @@
 					  }
 					 else
 					 {
-					   alert("Password atau Username Salahhhhhhh")/*displays error message*/
+					   alert("Password atau Username HASUUUUUU")/*displays error message*/
 					  }
 					}
 					</script>
