--- a/main_SignIn.html
+++ b/main_SignIn.html
@@ -32,20 +32,19 @@
 	
 	<div class="limiter">
 		<div class="container-login100" style="">
-			<!-- background-image: url('img/bg-01.jpg'); background gambar didalam style -->
 			<div class="wrap-login100 p-l-110 p-r-110 p-t-62 p-b-33">
 				<form class="login100-form validate-form flex-sb flex-w">
 					<span class="login100-form-title p-b-53">
 						Sign In
 					</span>
 					
-					<div class="p-t-31 p-b-9">
+					<div class="p-t-13 p-b-9">
 						<span class="txt1">
 							Username
 						</span>
 					</div>
 					<div class="wrap-input100 validate-input" data-validate = "Username is required">
-						<input class="input100" type="text" name="userid" >
+						<input class="input100" type="text" name="username" >
 						<span class="focus-input100"></span>
 					</div>
 					
@@ -59,7 +58,7 @@
 						</a>
 					</div>
 					<div class="wrap-input100 validate-input" data-validate = "Password is required">
-						<input class="input100" type="password" name="pswrd" >
+						<input class="input100" type="password" name="pass" >
 						<span class="focus-input100"></span>
 					</div>
 
@@ -84,7 +83,7 @@
 							 /*the following code checkes whether the entered userid and password are matching*/
 							 if(form.userid.value == "admin" && form.pswrd.value == "admin")
 							  {
-								window.open('target.html')/*opens the target page while Id & password matches*/
+								window.open('home.html')/*opens the target page while Id & password matches*/
 							  }
 							 else
 							 {
