--- a/contact.html
+++ b/contact.html
@@ -19,8 +19,6 @@
    <link rel="stylesheet" href="css/flaticon.css">
    <!-- magnific-popup CSS -->
    <link rel="stylesheet" href="css/magnific-popup.css">
-   <!-- slick CSS -->
-   <link rel="stylesheet" href="css/slick.css">
    <!-- font awesome CSS -->
    <link rel="stylesheet" href="fontawesome/css/all.min.css">
    <!-- style CSS -->
@@ -83,23 +81,6 @@
    </header>
    <!--::menu part end::-->
 
-   <!--banner-->
-   <section class="banner_part">
-      <div class="container">
-         <div class="row">
-            <div class="col-lg-5 offset-lg-1 col-sm-8 offset-sm-2">
-               <div class="banner_text aling-items-center">
-                  <div class="banner_text_iner">
-                     <h5>Contact Us</h5>
-                     <h5>LAMDA</h5>
-                  </div>
-               </div>
-            </div>
-         </div>
-      </div>
-   </section>
-   <!--banner-->
-
   <!--contact section start-->
   <section class="contact-section area-padding">
     <div class="container">
@@ -107,34 +88,34 @@
       </div>
       <div class="row">
         <div class="col-12">
-          <h2 class="contact-title">Message</h2>
+          <h2 class="contact-title">Pesan</h2>
         </div>
         <div class="col-lg-8">
           <form class="form-contact contact_form" action="contact_process.php" method="post" id="contactForm" novalidate="novalidate">
             <div class="row">
               <div class="col-12">
                 <div class="form-group">
-                    <textarea class="form-control w-100 placeholder hide-on-focus" name="message" id="message" cols="30" rows="9" placeholder="Enter Message"></textarea>
+                    <textarea class="form-control w-100 placeholder hide-on-focus" name="message" id="message" cols="30" rows="9" placeholder="Tulis pesan"></textarea>
                 </div>
               </div>
               <div class="col-sm-6">
                 <div class="form-group">
-                  <input class="form-control placeholder hide-on-focus" name="name" id="name" type="text" placeholder="Enter your name">
+                  <input class="form-control placeholder hide-on-focus" name="name" id="name" type="text" placeholder="Tulis nama kamu">
                 </div>
               </div>
               <div class="col-sm-6">
                 <div class="form-group">
-                  <input class="form-control placeholder hide-on-focus" name="email" id="email" type="email" placeholder="Enter your phone">
+                  <input class="form-control placeholder hide-on-focus" name="email" id="email" type="email" placeholder="Tulis nomer HP kamu">
                 </div>
               </div>
               <div class="col-12">
                 <div class="form-group">
-                  <input class="form-control placeholder hide-on-focus" name="subject" id="subject" type="text" placeholder="Enter Subject">
+                  <input class="form-control placeholder hide-on-focus" name="subject" id="subject" type="text" placeholder="Tulis Subjek">
                 </div>
               </div>
             </div>
             <div class="form-group mt-3">
-              <button type="submit" class="button button-contactForm">Send Message</button>
+              <button type="submit" class="button button-contactForm">Kirim Pesan</button>
             </div>
           </form>
         </div>
