--- a/home.html
+++ b/home.html
@@ -44,10 +44,10 @@
                            <a class="nav-link" href="home.html">Home</a>
                         </li>
                         <li class="nav-item">
-                           <a class="nav-link" href="about.html">about</a>
+                           <a class="nav-link" href="about.html">Tentang</a>
                         </li>
                         <li class="nav-item">
-                           <a class="nav-link" href="services.html">Services</a>
+                           <a class="nav-link" href="services.html">Pelayanan</a>
                         </li>
                         <li class="nav-item dropdown">
                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
@@ -71,7 +71,7 @@
                            </div>
                         </li>
                         <li class="nav-item">
-                           <a class="nav-link" href="contact.html">Contact</a>
+                           <a class="nav-link" href="contact.html">Kontak</a>
                         </li>
                         <li class="nav-item">
                            <a class="nav-link" href="index.html">Log Out</a>
