--- a/services.html
+++ b/services.html
@@ -90,7 +90,7 @@
             <div class="row justify-content-between align-items-center">
                 <div class="col-lg-7 col-xl-6">
                     <div class="section_tittle">
-                        <h2>our <span>services</span></h2>
+                        <h2><span>Pelayanan</span></h2>
                     </div>
                     <div class="service_part_iner">
                         <div class="row">
@@ -130,7 +130,7 @@
                 <div class="col-lg-4 col-sm-10">
                     <div class="service_text">
                         <h2>Hello Sobat LAMDA
-                            in <span> Services.</span></h2>
+                            di <span> Pelayanan.</span></h2>
                         <p>Semua pelayanan yang di berikan oleh LAMDA kepada semua masyarakat kabupaten tegal </p>
                         <a href="service.html" class="btn_1">learn more</a>
                     </div>
@@ -178,22 +178,12 @@
             <div class="row">
               <div class="col-12">
                 <div class="form-group">
-                    <textarea class="form-control w-100 placeholder hide-on-focus" name="message" id="message" cols="30" rows="9" placeholder="Enter Message"></textarea>
+                    <textarea class="form-control w-100 placeholder hide-on-focus" name="message" id="message" cols="30" rows="9" placeholder="Tulis aduan"></textarea>
                 </div>
               </div>
-              <!-- <div class="col-sm-6">
+               <div class="col-12">
                 <div class="form-group">
-                  <input class="form-control placeholder hide-on-focus" name="name" id="name" type="text" placeholder="Enter your name">
-                </div>
-              </div>
-              <div class="col-sm-6">
-                <div class="form-group">
-                  <input class="form-control placeholder hide-on-focus" name="email" id="email" type="email" placeholder="Enter email address">
-                </div>
-              </div> -->
-              <div class="col-12">
-                <div class="form-group">
-                  <input class="form-control placeholder hide-on-focus" name="subject" id="subject" type="text" placeholder="Enter Subject">
+                  <input class="form-control placeholder hide-on-focus" name="subject" id="subject" type="text" placeholder="Tulis Subjek">
                 </div>
               </div>
             </div>
@@ -263,10 +253,7 @@
           </div>
           <div class="col-sm-6 col-lg-3">
              <div class="single_footer_part">
-                   <h4>Newsletter</h4>
-                   <p>Jika anda ingin berpartisipasi dalam pengembangan situs , bisa kirimkan email anda untuk kami hubungi
-                   </p>
-                   <h4>Newsletter</h4>
+                 <h4>Newsletter</h4>
                 <p>Jika anda ingin berpartisipasi dalam pengembangan situs , bisa kirimkan email anda untuk kami hubungi
                 </p>
                 <div id="mc_embed_signup">
