--- a/about.html
+++ b/about.html
@@ -89,29 +89,12 @@
    </header>
    <!--::menu part end::-->
 
-   <!--banner-->
-   <section class="banner_part">
-      <div class="container">
-         <div class="row">
-            <div class="col-lg-5 offset-lg-1 col-sm-8 offset-sm-2">
-               <div class="banner_text aling-items-center">
-                  <div class="banner_text_iner">
-                     <h2>About Us LAMDA ?</h2>
-                     <p>LAMDA adalah Laporan Masyarakat Daerah ....</p>
-                  </div>
-               </div>
-            </div>
-         </div>
-      </div>
-   </section>
-   <!--banner part end-->
-
    <!--::team part end::-->
    <section class="about_part section-padding">
       <div class="container">
          <div class="row">
             <div class="section_tittle">
-               <h2><span>about</span> us LAMDA</h2>
+               <h2>Tentang <span>LAMDA</span></h2>
             </div>
          </div>
          <div class="row">
@@ -154,7 +137,7 @@
          <div class="row">
             <div class="col-lg-12">
                <div class="project_gallery_tittle">
-                  <h2>Kecamatan di<span> Kabupaten Tegal</span></h2>
+                  <h2>Kecamatan di<span> Kab.Tegal</span></h2>
                </div>
                <div class="grid">
                   <div class="grid-sizer"></div>
@@ -164,12 +147,6 @@
                         <div class="project_gallery_hover_text">
                            <p>Kecamatan Bumijawa</p>
                            <h3>Daerah dataran tinggi di Kabupaten Tegal </h3>
-                           <ul>
-                              <li><a href=""><span class="flaticon-bath"></span></a> 04</li>
-                              <li><a href=""><span class="flaticon-bed"></span></a> 03</li>
-                              <li><a href=""><span class="flaticon-frame"></span></a> 2400 sqft</li>
-                              <li><a href=""><span class="ti-heart"></span></a> like</li>
-                           </ul>
                         </div>
                      </div>
                   </div>
@@ -179,13 +156,7 @@
                         <div class="project_gallery_hover_text">
                            <p>Kecamatan Margasari</p>
                            <h3>Ujung bagian selatan kabupaten Tegal </h3>
-                           <ul>
-                              <li><a href=""><span class="flaticon-bath"></span></a> 04</li>
-                              <li><a href=""><span class="flaticon-bed"></span></a> 03</li>
-                              <li><a href=""><span class="flaticon-frame"></span></a> 2400 sqft</li>
-                              <li><a href=""><span class="ti-heart"></span></a> like</li>
-                           </ul>
-                        </div>
+                         </div>
                      </div>
                   </div>
                   <div class="grid-item">
@@ -194,12 +165,7 @@
                         <div class="project_gallery_hover_text">
                            <p>Kecamatan Suradadi</p>
                            <h3>Ujung bagian utara kabupaten Tegal </h3>
-                           <ul>
-                              <li><a href=""><span class="flaticon-bath"></span></a> 04</li>
-                              <li><a href=""><span class="flaticon-bed"></span></a> 03</li>
-                              <li><a href=""><span class="flaticon-frame"></span></a> 2400 sqft</li>
-                              <li><a href=""><span class="ti-heart"></span></a> like</li>
-                           </ul>
+                          
                         </div>
                      </div>
                   </div>
@@ -209,12 +175,6 @@
                         <div class="project_gallery_hover_text">
                            <p>Kecamatan Slawi</p>
                            <h3>Ibu kota kabupaten Tegal </h3>
-                           <ul>
-                              <li><a href=""><span class="flaticon-bath"></span></a> 04</li>
-                              <li><a href=""><span class="flaticon-bed"></span></a> 03</li>
-                              <li><a href=""><span class="flaticon-frame"></span></a> 2400 sqft</li>
-                              <li><a href=""><span class="ti-heart"></span></a> like</li>
-                           </ul>
                         </div>
                      </div>
                   </div>
