--- a/contact.html
+++ b/contact.html
@@ -141,7 +141,7 @@
             <span class="contact-info__icon"><i class="ti-email"></i></span>
             <div class="media-body">
               <h3><a href="mailto:support@colorlib.com">Lamda@gmail.com</a></h3>
-              <p>Send us your query anytime!</p>
+              <p>Kirim surat kalian!</p>
             </div>
           </div>
         </div>
