--- a/home.html
+++ b/home.html
@@ -6,7 +6,7 @@
    <meta charset="utf-8">
    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
    <title>LAMDA || Home</title>
-   <link rel="icon" href="img/logoo.png">
+   <link rel="icon" href="img/logo_lamda.png">
    <!-- Bootstrap CSS -->
    <link rel="stylesheet" href="css/bootstrap.min.css">
    <!-- animate CSS -->
