--- a/services.html
+++ b/services.html
@@ -22,7 +22,7 @@
     <!-- font awesome CSS -->
     <link rel="stylesheet" href="fontawesome/css/all.min.css">
     <!-- style CSS -->
-    <link rel="stylesheet" href="css/home.css">
+    <link rel="stylesheet" href="css/services.css">
 </head>
 
 <body>
@@ -211,7 +211,7 @@
             <span class="contact-info__icon"><i class="ti-email"></i></span>
             <div class="media-body">
               <h3><a href="mailto:support@colorlib.com">Lamda@gmail.com</a></h3>
-              <p>Send us your query anytime!</p>
+              <p>Kirim surat kalian!</p>
             </div>
           </div>
         </div>
