--- a/home.html
+++ b/home.html
@@ -11,8 +11,6 @@
    <link rel="stylesheet" href="css/bootstrap.min.css">
    <!-- animate CSS -->
    <link rel="stylesheet" href="css/animate.css">
-   <!-- owl carousel CSS -->
-   <link rel="stylesheet" href="css/owl.carousel.min.css">
    <!-- themify CSS -->
    <link rel="stylesheet" href="css/themify-icons.css">
    <!-- flaticon CSS -->
@@ -199,30 +197,17 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
  <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
    <!-- jquery plugins here-->
    <script src="js/jquery-1.12.1.min.js"></script>
-   <!-- popper js -->
-   <script src="js/popper.min.js"></script>
    <!-- bootstrap js -->
    <script src="js/bootstrap.min.js"></script>
-   <!-- magnific js -->
-   <script src="js/jquery.magnific-popup.min.js"></script>
-   <!-- carousel js -->
-   <script src="js/owl.carousel.min.js"></script>
    <!-- easing js -->
-   <script src="js/jquery.easing.min.js"></script>
-   <!--masonry js-->
-   <script src="js/masonry.pkgd.min.js"></script>
-   <script src="js/masonry.pkgd.js"></script>
+   <!-- <script src="js/jquery.easing.min.js"></script> -->
    <!--form validation js-->
    <script src="js/jquery.nice-select.min.js"></script>
-	<script src="js/contact.js"></script>
+
 	<script src="js/jquery.ajaxchimp.min.js"></script>
 	<script src="js/jquery.form.js"></script>
-	<script src="js/jquery.validate.min.js"></script>
 	<script src="js/mail-script.js"></script>
-   <!-- counter js -->
-   <script src="js/jquery.counterup.min.js"></script>
-   <script src="js/waypoints.min.js"></script>
-   <!-- custom js -->
+  <!-- custom js animasi header -->
    <script src="js/custom.js"></script>
 </body>
 
