--- a/contact.html
+++ b/contact.html
@@ -9,18 +9,10 @@
    <link rel="icon" href="img/logo_lamda.png">
    <!-- Bootstrap CSS -->
    <link rel="stylesheet" href="css/bootstrap.min.css">
+   <!-- css icon rumah, phone, dll -->
+   <link rel="stylesheet" href="css/themify-icons.css">
    <!-- animate CSS -->
    <link rel="stylesheet" href="css/animate.css">
-   <!-- owl carousel CSS -->
-   <link rel="stylesheet" href="css/owl.carousel.min.css">
-   <!-- themify CSS -->
-   <link rel="stylesheet" href="css/themify-icons.css">
-   <!-- flaticon CSS --> 
-   <link rel="stylesheet" href="css/flaticon.css">
-   <!-- magnific-popup CSS -->
-   <link rel="stylesheet" href="css/magnific-popup.css">
-   <!-- font awesome CSS -->
-   <link rel="stylesheet" href="fontawesome/css/all.min.css">
    <!-- style CSS -->
    <link rel="stylesheet" href="css/contact.css">
 </head>
