--- a/contact.html
+++ b/contact.html
@@ -100,7 +100,7 @@
               </div>
               <div class="col-sm-6">
                 <div class="form-group">
-                  <input class="form-control placeholder hide-on-focus" name="email" id="email" type="email" placeholder="Tulis nomer HP kamu">
+                  <input class="form-control placeholder hide-on-focus" name="email" id="email" type="email" placeholder="Tulis email kamu">
                 </div>
               </div>
               <div class="col-12">
@@ -178,18 +178,6 @@
                 <h4>Newsletter</h4>
                 <p>Jika anda ingin berpartisipasi dalam pengembangan situs , bisa kirimkan email anda untuk kami hubungi
                 </p>
-                <div id="mc_embed_signup">
-                  <form target="_blank"
-                     action="https://spondonit.us12.list-manage.com/subscribe/post?u=1462626880ade1ac87bd9c93a&amp;id=92a4423d01"
-                     method="get" class="subscribe_form relative mail_part" required>
-                     <input type="email" name="email" id="newsletter-form-email" placeholder="Email Address"
-                        class="placeholder hide-on-focus" onfocus="this.placeholder = ''" onblur="this.placeholder = ' Email Address '"
-                        required="" type="email">
-                     <button type="submit" name="submit" id="newsletter-submit"
-                        class="email_icon newsletter-submit button-contactForm"><i
-                           class="far fa-paper-plane"></i></button>
-                     <div class="mt-10 info"></div>
-                  </form>
                </div>
              </div>
           </div>
