--- a/home.html
+++ b/home.html
@@ -162,21 +162,8 @@
          <div class="col-sm-6 col-lg-3">
             <div class="single_footer_part">
                   <h4>Newsletter</h4>
-               <p>Jika anda ingin berpartisipasi dalam pengembangan situs , bisa kirimkan email anda untuk kami hubungi
+               <p>Jika anda ingin berpartisipasi dalam pengembangan situs , bisa kirimkan email anda dan pesan pada bagian kontak
                </p>
-               <div id="mc_embed_signup">
-                     <form target="_blank"
-                        action="https://spondonit.us12.list-manage.com/subscribe/post?u=1462626880ade1ac87bd9c93a&amp;id=92a4423d01"
-                        method="get" class="subscribe_form relative mail_part" required>
-                        <input type="email" name="email" id="newsletter-form-email" placeholder="Email Address"
-                           class="placeholder hide-on-focus" onfocus="this.placeholder = ''" onblur="this.placeholder = ' Email Address '"
-                           required="" type="email">
-                        <button type="submit" name="submit" id="newsletter-submit"
-                           class="email_icon newsletter-submit button-contactForm"><i
-                              class="far fa-paper-plane"></i></button>
-                        <div class="mt-10 info"></div>
-                 </form>
-              </div>
             </div>
          </div>
       </div>
