--- a/contact.html
+++ b/contact.html
@@ -214,7 +214,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
  <script src="js/masonry.pkgd.js"></script>
  <!--form validation js-->
  <script src="js/jquery.nice-select.min.js"></script>
- <script src="js/contact.js"></script>
+ <!-- <script src="js/contact.js"></script> -->
  <script src="js/jquery.ajaxchimp.min.js"></script>
  <script src="js/jquery.form.js"></script>
  <script src="js/jquery.validate.min.js"></script>
