--- a/contact.html
+++ b/contact.html
@@ -118,21 +118,21 @@
           <div class="media contact-info">
             <span class="contact-info__icon"><i class="ti-home"></i></span>
             <div class="media-body">
-              <h3><a href="">Tegal, Slawi.</a></h3>
+              <h3><a></a> Tegal, Slawi.</a></h3>
               <p>Jl. Gajah Mada, No 5</p>
             </div>
           </div>
           <div class="media contact-info">
             <span class="contact-info__icon"><i class="ti-tablet"></i></span>
             <div class="media-body">
-              <h3><a href="tel:085388897">0283 (12345)</a></h3>
+              <h3><a>0283 (12345)</a></h3>
               <p>24Hours</p>
             </div>
           </div>
           <div class="media contact-info">
             <span class="contact-info__icon"><i class="ti-email"></i></span>
             <div class="media-body">
-              <h3><a href="mailto:support@colorlib.com">Lamda@gmail.com</a></h3>
+              <h3><a> Lamda@gmail.com</a></h3>
               <p>Kirim surat kalian!</p>
             </div>
           </div>
@@ -214,7 +214,6 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
  <script src="js/masonry.pkgd.js"></script>
  <!--form validation js-->
  <script src="js/jquery.nice-select.min.js"></script>
- <script src="js/contact.js"></script>
  <script src="js/jquery.ajaxchimp.min.js"></script>
  <script src="js/jquery.form.js"></script>
  <script src="js/jquery.validate.min.js"></script>
