--- a/home.html
+++ b/home.html
@@ -48,12 +48,12 @@
                            <a class="nav-link" href="services.html">Pelayanan</a>
                         </li>
                         <li class="nav-item dropdown">
-                           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                           <a class="nav-link dropdown-toggle" href="blog/blog.html" id="navbarDropdown" role="button"
                               data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                               blog
                            </a>
                            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                              <a class="dropdown-item" href="#">blog</a>
+                              <a class="dropdown-item" href="blog/blog.html">blog</a>
                               <a class="dropdown-item" href="#">Single blog</a>
                            </div>
                         </li>
