--- a/blog.html
+++ b/blog.html
@@ -279,6 +279,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
    <script src="js/jquery.counterup.min.js"></script>
    <script src="js/waypoints.min.js"></script>
    <!-- custom js -->
+   <!-- aaa -->
    <script src="js/custom.js"></script>
 </body>
 
