--- a/home.html
+++ b/home.html
@@ -53,7 +53,7 @@
                               blog
                            </a>
                            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                              <a class="dropdown-item" href="blog/blog.html">blog</a>
+                              <a class="dropdown-item" href="blog.html">blog</a>
                               <a class="dropdown-item" href="#">Single blog</a>
                            </div>
                         </li>
