--- a/home.html
+++ b/home.html
@@ -90,7 +90,7 @@
             <div class="col-lg-5 offset-lg-1 col-sm-8 offset-sm-2">
                <div class="banner_text aling-items-center">
                   <div class="banner_text_iner">
-                     <h2>LAMDA</h2>
+                     <br><h2>LAMDA</h2>
                      <h5>Laporan Masyarakat Daerah ...</h5>
                      <p> Kabupaten Tegal </p>
                   </div>
