--- a/services.html
+++ b/services.html
@@ -51,24 +51,14 @@
                                 <li class="nav-item dropdown">
                                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                                         data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                        blog
+                                        Berita
                                     </a>
                                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                        <a class="dropdown-item" href="#">blog</a>
-                                        <a class="dropdown-item" href="#">Single blog</a>
+                                        <a class="dropdown-item" href="blog.html">Daftar Laporan Masuk</a>
+                                        <a class="dropdown-item" href="#">Daftar Masalah</a>
                                     </div>
                                 </li>
-                                <li class="nav-item dropdown">
-                                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                        pages
-                                    </a>
-                                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                        <a class="dropdown-item" href="#">Project</a>
-                                        <a class="dropdown-item" href="#">Apartment</a>
-                                        <a class="dropdown-item" href="#">Elements</a>
-                                    </div>
-                                </li>
+                       
                                 <li class="nav-item">
                                     <a class="nav-link" href="contact.html">Kontak</a>
                                 </li>
@@ -132,7 +122,7 @@
                         <h2>Hello Sobat LAMDA
                             di <span> Pelayanan.</span></h2>
                         <p>Semua pelayanan yang di berikan oleh LAMDA kepada semua masyarakat kabupaten tegal </p>
-                        <a href="service.html" class="btn_1">learn more</a>
+                        <a href="service.html" class="btn_1">Pelajari</a>
                     </div>
                 </div>
             </div>
