--- a/blog.html
+++ b/blog.html
@@ -18,7 +18,7 @@
    <!-- Required meta tags -->
    <meta charset="utf-8">
    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-   <title>Real_state || blog</title>
+   <title>LAMDA || Berita</title>
    <link rel="icon" href="img/favicon.png">
    <!-- Bootstrap CSS -->
    <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -86,24 +86,14 @@
                         <li class="nav-item dropdown">
                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                               data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                              blog
+                              Berita
                            </a>
                            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                              <a class="dropdown-item" href="#">blog</a>
-                              <a class="dropdown-item" href="#">Single blog</a>
+                              <a class="dropdown-item" href="blog.html">Daftar Laporan Masuk</a>
+                              <a class="dropdown-item" href="#">Daftar Masalah</a>
                            </div>
                         </li>
-                        <li class="nav-item dropdown">
-                           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                              data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                              pages
-                           </a>
-                           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                              <a class="dropdown-item" href="#">Project</a>
-                              <a class="dropdown-item" href="#">Apartment</a>
-                              <a class="dropdown-item" href="#">Elements</a>
-                           </div>
-                        </li>
+                        
                         <li class="nav-item">
                            <a class="nav-link" href="contact.html">Kontak</a>
                         </li>
