--- a/home.html
+++ b/home.html
@@ -50,23 +50,14 @@
                         <li class="nav-item dropdown">
                            <a class="nav-link dropdown-toggle" href="blog/blog.html" id="navbarDropdown" role="button"
                               data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                              blog
+                              berita
                            </a>
                            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                              <a class="dropdown-item" href="blog.html">blog</a>
-                              <a class="dropdown-item" href="#">Single blog</a>
+                              <a class="dropdown-item" href="blog.html">Daftar Laporan Masuk</a>
+                              <a class="dropdown-item" href="#">Daftar Masalah</a>
                            </div>
                         </li>
-                        <li class="nav-item dropdown">
-                           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                              data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                              pages
-                           </a>
-                           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                              <a class="dropdown-item" href="#">Project</a>
-                              <a class="dropdown-item" href="#">Apartment</a>
-                              <a class="dropdown-item" href="#x">Elements</a>
-                           </div>
+                     
                         </li>
                         <li class="nav-item">
                            <a class="nav-link" href="contact.html">Kontak</a>
