--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
    <!-- Required meta tags -->
    <meta charset="utf-8">
    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-   <title>LAMDA || About</title>
+   <title>LAMDA || Tentang</title>
    <link rel="icon" href="img/logo_lamda.png">
    <!-- Bootstrap CSS -->
    <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -51,22 +51,21 @@
                         <li class="nav-item">
                            <a class="nav-link" href="services.html">Pelayanan</a>
                         </li>
-                        <li class="nav-item dropdown">
-                           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                              data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                              Berita
-                           </a>
-                           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                              <a class="dropdown-item" href="blog.html">Daftar Laporan Masuk</a>
-                              <a class="dropdown-item" href="#">Daftar Masalah</a>
-                           </div>
+                        <li class="nav-item">
+                           <a class="nav-link" href="blog.html">Berita</a>
                         </li>
-                        
                         <li class="nav-item">
                            <a class="nav-link" href="contact.html">Kontak</a>
                         </li>
-                        <li class="nav-item">
-                           <a class="nav-link" href="index.html">Log Out</a>
+                        <li class="nav-item dropdown">
+                           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                              data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                              Akun Saya
+                           </a>
+                           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                              <a class="dropdown-item" href="akun.html">admin</a>
+                              <a class="dropdown-item" href="index.html">Log Out</a>
+                           </div>
                         </li>
                      </ul>
                   </div>
@@ -101,15 +100,11 @@
                      <div class="about_part_counter">
                         <div class="single_counter">
                            <span class="counter">100</span>
-                           <p>project</p>
-                        </div>
-                        <div class="single_counter">
-                           <span class="counter">300</span>
-                           <p>clients</p>
+                           <p>Aduan</p>
                         </div>
                         <div class="single_counter">
                            <span class="counter">150</span>
-                           <p>member</p>
+                           <p>Member</p>
                      </div>
                   </div>
                </div>
