--- a/blog.html
+++ b/blog.html
@@ -5,7 +5,7 @@
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <title>LAMDA || contact</title>
+  <title>LAMDA || Berita</title>
   <link rel="icon" href="img/logo_lamda.png">
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -83,22 +83,21 @@
                         <li class="nav-item">
                            <a class="nav-link" href="services.html">Pelayanan</a>
                         </li>
-                        <li class="nav-item dropdown">
-                           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                              data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                              Berita
-                           </a>
-                           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                              <a class="dropdown-item" href="blog.html">Daftar Laporan Masuk</a>
-                              <a class="dropdown-item" href="#">Daftar Masalah</a>
-                           </div>
+                        <li class="nav-item">
+                           <a class="nav-link" href="blog.html">Berita</a>
                         </li>
-                        
                         <li class="nav-item">
                            <a class="nav-link" href="contact.html">Kontak</a>
                         </li>
-                        <li class="nav-item">
-                           <a class="nav-link" href="index.html">Log Out</a>
+                        <li class="nav-item dropdown">
+                           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                              data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                              Akun Saya
+                           </a>
+                           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                              <a class="dropdown-item" href="akun.html">admin</a>
+                              <a class="dropdown-item" href="index.html">Log Out</a>
+                           </div>
                         </li>
                      </ul>
                   </div>
@@ -129,13 +128,11 @@
 
               <div class="blog_details">
                 <a class="d-inline-block" href="single-blog.html">
-                  <h2>Google inks pact for new 35-storey office</h2>
+                  <h2>Banjir di daerah pantura</h2>
                 </a>
-                <p>That dominion stars lights dominion divide years for fourth have don't stars is that he earth it
-                  first without heaven in place seed it second morning saying.</p>
+                <p>Akibat Air laut naik, sehingga pemukiman warga disekitar pantai hanyut oleh air laut</p>
                 <ul class="blog-info-link">
-                  <li><a href="#"><i class="far fa-user"></i> Travel, Lifestyle</a></li>
-                  <li><a href="#"><i class="far fa-comments"></i> 03 Comments</a></li>
+                  <li><a href="#"><i class="far fa-comments"></i> 11 Comments</a></li>
                 </ul>
               </div>
             </article>
@@ -151,13 +148,11 @@
 
               <div class="blog_details">
                 <a class="d-inline-block" href="single-blog.html">
-                  <h2>Google inks pact for new 35-storey office</h2>
+                  <h2>Pencurian sepeda motor</h2>
                 </a>
-                <p>That dominion stars lights dominion divide years for fourth have don't stars is that he earth it
-                  first without heaven in place seed it second morning saying.</p>
+                <p>Pencurian ini terjadi akibat kelalaian pemilik saat meninggal kendaraan</p>
                 <ul class="blog-info-link">
-                  <li><a href="#"><i class="far fa-user"></i> Travel, Lifestyle</a></li>
-                  <li><a href="#"><i class="far fa-comments"></i> 03 Comments</a></li>
+                  <li><a href="#"><i class="far fa-comments"></i> 06 Comments</a></li>
                 </ul>
               </div>
             </article>
@@ -175,10 +170,8 @@
                 <a class="d-inline-block" href="single-blog.html">
                   <h2>Jalan rusak di daerah Slawi</h2>
                 </a>
-                <p>That dominion stars lights dominion divide years for fourth have don't stars is that he earth it
-                  first without heaven in place seed it second morning saying.</p>
+                <p>Jalan di slawi ini sudah sangat rusak untuk dilalui pesepeda motor</p>
                 <ul class="blog-info-link">
-                  <li><a href="#"><i class="far fa-user"></i> Travel, Lifestyle</a></li>
                   <li><a href="#"><i class="far fa-comments"></i> 03 Comments</a></li>
                 </ul>
               </div>
