--- a/home.html
+++ b/home.html
@@ -47,23 +47,21 @@
                         <li class="nav-item">
                            <a class="nav-link" href="services.html">Pelayanan</a>
                         </li>
-                        <li class="nav-item dropdown">
-                           <a class="nav-link dropdown-toggle" href="blog/blog.html" id="navbarDropdown" role="button"
-                              data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                              berita
-                           </a>
-                           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                              <a class="dropdown-item" href="blog.html">Daftar Laporan Masuk</a>
-                              <a class="dropdown-item" href="#">Daftar Masalah</a>
-                           </div>
-                        </li>
-                     
+                        <li class="nav-item">
+                           <a class="nav-link" href="blog.html">Berita</a>
                         </li>
                         <li class="nav-item">
                            <a class="nav-link" href="contact.html">Kontak</a>
                         </li>
-                        <li class="nav-item">
-                           <a class="nav-link" href="index.html">Log Out</a>
+                        <li class="nav-item dropdown">
+                           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                              data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                              Akun Saya
+                           </a>
+                           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                              <a class="dropdown-item" href="akun.html">admin</a>
+                              <a class="dropdown-item" href="index.html">Log Out</a>
+                           </div>
                         </li>
                      </ul>
                   </div>
