--- a/akun.html
+++ b/akun.html
@@ -5,7 +5,7 @@
    <!-- Required meta tags -->
    <meta charset="utf-8">
    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-   <title>LAMDA || Kontak</title>
+   <title>LAMDA || Akun</title>
    <link rel="icon" href="img/logo_lamda.png">
    <!-- Bootstrap CSS -->
    <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -52,7 +52,7 @@
                               Akun Saya
                            </a>
                            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                              <a class="dropdown-item" href="akun.html">admin</a>
+                              <a class="dropdown-item" href="blog.html">admin</a>
                               <a class="dropdown-item" href="index.html">Log Out</a>
                            </div>
                         </li>
@@ -72,67 +72,45 @@
       </div>
       <div class="row">
         <div class="col-12">
-          <h2 class="contact-title">Pesan</h2>
+          <h2 class="contact-title">Akun Saya</h2>
         </div>
         <div class="col-lg-8">
           <form class="form-contact contact_form" action="contact_process.php" method="post" id="contactForm" novalidate="novalidate">
             <div class="row">
-              <div class="col-12">
+              <!-- <div class="col-12">
                 <div class="form-group">
                     <textarea class="form-control w-100 placeholder hide-on-focus" name="message" id="message" cols="30" rows="9" placeholder="Tulis pesan"></textarea>
                 </div>
-              </div>
+              </div> -->
               <div class="col-sm-6">
                 <div class="form-group">
-                  <input class="form-control placeholder hide-on-focus" name="name" id="name" type="text" placeholder="Tulis nama kamu">
+                  <div class="form-control placeholder hide-on-focus" name="name" id="name" type="text" <a>Admin</a></div>
                 </div>
               </div>
               <div class="col-sm-6">
                 <div class="form-group">
-                  <input class="form-control placeholder hide-on-focus" name="email" id="email" type="email" placeholder="Tulis email kamu">
+                  <div class="form-control placeholder hide-on-focus" name="email" id="email" type="email" <a>admin@gmail.com</a></div>
                 </div>
               </div>
               <div class="col-12">
                 <div class="form-group">
-                  <input class="form-control placeholder hide-on-focus" name="subject" id="subject" type="text" placeholder="Tulis Subjek">
+                  <div class="form-control placeholder hide-on-focus" name="subject" id="subject" type="text" <a>087623743243</a></div>
                 </div>
               </div>
             </div>
             <div class="form-group mt-3">
-              <button type="submit" class="button button-contactForm">Kirim Pesan</button>
+              <button type="submit" class="button button-contactForm">Ubah Data</button>
             </div>
           </form>
         </div>
-        <div class="col-lg-4">
-          <div class="media contact-info">
-            <span class="contact-info__icon"><i class="ti-home"></i></span>
-            <div class="media-body">
-              <h3><a></a> Tegal, Slawi.</a></h3>
-              <p>Jl. Gajah Mada, No 5</p>
-            </div>
-          </div>
-          <div class="media contact-info">
-            <span class="contact-info__icon"><i class="ti-tablet"></i></span>
-            <div class="media-body">
-              <h3><a>0283 (12345)</a></h3>
-              <p>24Hours</p>
-            </div>
-          </div>
-          <div class="media contact-info">
-            <span class="contact-info__icon"><i class="ti-email"></i></span>
-            <div class="media-body">
-              <h3><a> Lamda@gmail.com</a></h3>
-              <p>Kirim surat kalian!</p>
-            </div>
-          </div>
-        </div>
+       </div>
       </div>
     </div>
   </section>
   <!--contact section end-->
 
  <!--::footer_part start::-->
- <footer class="footer_part">
+ <br><br><br><br><br><br><footer class="footer_part">
     <div class="container">
        <div class="row">
           <div class="col-lg-12">
