--- a/services.html
+++ b/services.html
@@ -5,7 +5,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>LAMDA || Services</title>
+    <title>LAMDA || Pelayanan</title>
     <link rel="icon" href="img/logo_lamda.png">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -48,22 +48,21 @@
                                 <li class="nav-item">
                                     <a class="nav-link" href="services.html">Pelayanan</a>
                                 </li>
-                                <li class="nav-item dropdown">
+                                <li class="nav-item">
+                                    <a class="nav-link" href="blog.html">Berita</a>
+                                 </li>
+                                 <li class="nav-item">
+                                    <a class="nav-link" href="contact.html">Kontak</a>
+                                 </li>
+                                 <li class="nav-item dropdown">
                                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                        Berita
+                                       data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                       Akun Saya
                                     </a>
                                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                        <a class="dropdown-item" href="blog.html">Daftar Laporan Masuk</a>
-                                        <a class="dropdown-item" href="#">Daftar Masalah</a>
+                                       <a class="dropdown-item" href="akun.html">admin</a>
+                                       <a class="dropdown-item" href="index.html">Log Out</a>
                                     </div>
-                                </li>
-                       
-                                <li class="nav-item">
-                                    <a class="nav-link" href="contact.html">Kontak</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="index.html">Log Out</a>
                                  </li>
                             </ul>
                         </div>
