--- a/blog.html
+++ b/blog.html
@@ -15,50 +15,10 @@
   <link rel="stylesheet" href="css/animate.css">
   <!-- style CSS -->
   <link rel="stylesheet" href="css/contact.css">
-   <!-- Required meta tags -->
-   <meta charset="utf-8">
-   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-   <title>LAMDA || Berita</title>
-   <link rel="icon" href="img/favicon.png">
-   <!-- Bootstrap CSS -->
-   <link rel="stylesheet" href="css/bootstrap.min.css">
-   <!-- animate CSS -->
-   <link rel="stylesheet" href="css/animate.css">
-   <!-- owl carousel CSS -->
-   <link rel="stylesheet" href="css/owl.carousel.min.css">
-   <!-- themify CSS -->
-   <link rel="stylesheet" href="css/themify-icons.css">
-   <!-- flaticon CSS -->
-   <link rel="stylesheet" href="css/flaticon.css">
-   <!-- magnific-popup CSS -->
-   <link rel="stylesheet" href="css/magnific-popup.css">
-   <!-- slick CSS -->
-   <link rel="stylesheet" href="css/slick.css">
-   <!-- font awesome CSS -->
-   <link rel="stylesheet" href="fontawesome/css/all.min.css">
-   <!-- style CSS -->
-   <link rel="stylesheet" href="css/style.css">
+   
 </head>
 
-<body>
-  <!doctype html>
-<html lang="en">
-
-<head>
-   <!-- Required meta tags -->
-   <meta charset="utf-8">
-   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-   <title>LAMDA || contact</title>
-   <link rel="icon" href="img/logo_lamda.png">
-   <!-- Bootstrap CSS -->
-   <link rel="stylesheet" href="css/bootstrap.min.css">
-   <!-- css icon rumah, phone, dll -->
-   <link rel="stylesheet" href="css/themify-icons.css">
-   <!-- animate CSS -->
-   <link rel="stylesheet" href="css/animate.css">
-   <!-- style CSS -->
-   <link rel="stylesheet" href="css/contact.css">
-</head>
+ 
 
 <body>
    <!--::menu part start::-->
@@ -192,7 +152,7 @@
 
           <div class="col-sm-6 col-lg-3">
              <div class="single_footer_part">
-                <h4>About Us</h4>
+                <h4>LAMDA</h4>
                 <p>LAMDA, Laporan Masyarakat Daerah Kabupaten Tegal siap melayani !!...</p>
                 <div class="footer_icon social_icon">
                    <ul class="list-unstyled">
