--- a/home.html
+++ b/home.html
@@ -129,7 +129,7 @@
 
          <div class="col-sm-6 col-lg-3">
             <div class="single_footer_part">
-               <h4>About Us</h4>
+               <h4>LAMDA</h4>
                <p>LAMDA, Laporan Masyarakat Daerah Kabupaten Tegal siap melayani !!...</p>
                <div class="footer_icon social_icon">
                   <ul class="list-unstyled">
