--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
   
 
    <!--::footer_part start::-->
-   <footer class="footer_part">
+ <br><br>  <footer class="footer_part">
        
          <div class="row">
             <div class="col-lg-12">
