--- a/main_SignIn.html
+++ b/main_SignIn.html
@@ -5,8 +5,6 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 <!--===============================================================================================-->	
-	<link rel="icon" type="image/png" href="images/icons/favicon.ico"/>
-<!--===============================================================================================-->
 	<link rel="stylesheet" type="text/css" href="vendor/bootstrap/css/bootstrap.min.css">
 <!--===============================================================================================-->
 	<link rel="stylesheet" type="text/css" href="fonts/font-awesome-4.7.0/css/font-awesome.min.css">
@@ -88,7 +86,7 @@
 							  }
 							 else
 							 {
-							   alert("Password atau Username Salah")/*displays error message*/
+							   alert("Password atau Username Salah, Masukan username 'admin' dan password 'admin' untuk bisa masuk karena web masih dalam masa uji coba")/*displays error message*/
 							  }
 							}
 							</script>
