--- a/main_SignUp.html
+++ b/main_SignUp.html
@@ -4,8 +4,6 @@
 	<title>Sign Up</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-<!--===============================================================================================-->	
-	<link rel="icon" type="image/png" href="images/icons/favicon.ico"/>
 <!--===============================================================================================-->
 	<link rel="stylesheet" type="text/css" href="vendor/bootstrap/css/bootstrap.min.css">
 <!--===============================================================================================-->
@@ -37,24 +35,14 @@
 					<span class="login100-form-title p-b-53">
 						Sign Up
 					</span>
-
-					<!-- <a href="#" class="btn-face m-b-20">
-						<i class="fa fa-facebook-official"></i>
-						Facebook
-					</a>
-
-					<a href="#" class="btn-google m-b-20">
-						<img src="img/icons/icon-google.png" alt="GOOGLE">
-						Google
-					</a> -->
 					<div class="p-t-13 p-b-9">
-							<span class="txt1">
-								Email
-							</span>
-						</div>
-						<div class="wrap-input100 validate-input" data-validate = "Email is required">
-							<input class="input100" type="text" name="email" >
-							<span class="focus-input100"></span>
+						<span class="txt1">
+							Email
+						</span>
+					</div>
+					<div class="wrap-input100 validate-input" data-validate = "Email is required">
+						<input class="input100" type="text" name="em" >
+						<span class="focus-input100"></span>
 						</div>
 					<div class="p-t-13 p-b-9">
 						<span class="txt1">
@@ -62,7 +50,7 @@
 						</span>
 					</div>
 					<div class="wrap-input100 validate-input" data-validate = "Username is required">
-						<input class="input100" type="text" name="username" >
+						<input class="input100" type="text" name="userid" >
 						<span class="focus-input100"></span>
 					</div>
 					<div class="p-t-13 p-b-9">
@@ -71,7 +59,7 @@
 						</span>
 					</div>
 					<div class="wrap-input100 validate-input" data-validate = "Password is required">
-						<input class="input100" type="password" name="pass" >
+						<input class="input100" type="password" name="pswrd" >
 						<span class="focus-input100"></span>
 					</div>
 					<div class="p-t-13 p-b-9">
@@ -80,27 +68,33 @@
 						</span>
 					</div>
 					<div class="wrap-input100 validate-input" data-validate = "Password is required">
-						<input class="input100" type="password" name="pass" >
+						<input class="input100" type="password" name="con" >
 						<span class="focus-input100"></span>
 					</div>
-
-
-					<div class="container-login100-form-btn m-t-17">
-						<button href="home.html" class="login100-form-btn" >
+					<!-- <div class="container-login100-form-btn m-t-17"> -->
+					<div href="home.html" class="container-login100-form-btn m-t-17">
+						<button class="login100-form-btn" onclick="check(this.form)" value="Login">
+						<!-- <button href="home.html" class="login100-form-btn" > -->
 							Sign Up
 						</button>
 					</div>
 
-					<!-- <div class="w-full text-center p-t-55">
-						<span class="txt2">
-							Not a member?
-						</span>
-
-						<a href="#" class="txt2 bo1">
-							Sign up now
-						</a> -->
+					<script language="javascript">
+						function check(form)/*function to check userid & password*/
+						{
+						 /*the following code checkes whether the entered userid and password are matching*/
+						 if(form.em.value == "admin" & form.userid.value == "admin" & form.pswrd.value == "admin" & form.con.value == "admin"  )
+						  {
+							window.open ('home.html')/*opens the target page while Id & password matches*/
+						  }
+						 else
+						 {
+						   alert("Masukan semua form dengan 'admin' karena web ini sedang dalam masa uji coba")/*displays error message*/
+						  }
+						}
+						</script>
 						
-					</div>
+					
 				</form>
 			</div>
 		</div>
