--- a/akun.html
+++ b/akun.html
@@ -14,7 +14,7 @@
    <!-- animate CSS -->
    <link rel="stylesheet" href="css/animate.css">
    <!-- style CSS -->
-   <link rel="stylesheet" href="css/contact.css">
+   <link rel="stylesheet" href="css/akun.css">
 </head>
 
 <body>
