--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             <div class="col-lg-12">
                <div class="copyright_text text-center">
                   <P><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> LAMDA  <i class="fa fa-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Kelompok X</a>
+Copyright &copy;<script>document.write(new Date().getFullYear());</script> LAMDA  <i class="fa fa-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Naufal,Omar,Sultan</a>
 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></P>
                </div>
             </div>
