--- a/about.html
+++ b/about.html
@@ -208,7 +208,7 @@
                       </div>
                       <div data-index="2">
                           <div class="client_review_text text-center">
-                              <h3>Zhafran Ommar</h3>
+                              <h3>Zhafran Ammar</h3>
                               <h5>programmer</h5>
                               <p>Saya programmer cukup senang sengan adanya situs yang positif ini, didalamnya sudah sangat lengkap akan fasilitas aduan</p>
                           </div>
@@ -278,7 +278,7 @@
          <div class="col-lg-12">
             <div class="copyright_text text-center">
                <P><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved |<i class="fa fa-heart" aria-hidden="true"></i> by <a href="home.html" target="_blank">LAMDA</a>
+Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved |<i aria-hidden="true"></i> by <a href="home.html" target="_blank">LAMDA</a>
 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></P>
             </div>
          </div>
