--- a/home.html
+++ b/home.html
@@ -161,7 +161,7 @@
          <div class="col-lg-12">
             <div class="copyright_text text-center">
                <P><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved |<i class="fa fa-heart" aria-hidden="true"></i> by <a href="home.html" target="_blank">LAMDA</a>
+Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved |<i aria-hidden="true"></i> by <a href="home.html" target="_blank">LAMDA</a>
 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></P>
             </div>
          </div>
