--- a/about.html
+++ b/about.html
@@ -222,7 +222,7 @@
                       </div>
                       <div data-index="4">
                           <div class="client_review_text text-center">
-                              <h3>Zhafran Ommar</h3>
+                              <h3>Zhafran Ammar</h3>
                               <h5>programmer</h5>
                               <p>Saya progrrammer cukup senang sengan adanya situs yang positif ini, didalamnya sudah sangat lengkap akan fasilitas aduan </p>
                           </div>
