--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             <div class="col-lg-12">
                <div class="copyright_text text-center">
                   <P>
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> LAMDA  <i aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Naufal,Zhafran,Sultan</a>
+Copyright &copy;<script>document.write(new Date().getFullYear());</script> LAMDA  <i aria-hidden="true"></i> by <a href="" target="_blank">Naufal,Zhafran,Sultan</a>
 </P>
                </div>
             </div>
