--- a/main_SignIn.html
+++ b/main_SignIn.html
@@ -59,17 +59,17 @@
 
 					<div href="home.html" class="container-login100-form-btn m-t-17">
 						<button class="login100-form-btn" onclick="check(this.form)" value="Login">
-							Sign In
+							Masuk
 						</button>
 					</div>
 
 					<div class="w-full text-center p-t-55">
 						<span class="txt2">
-							Not a member?
+							Belum punya akun?
 						</span>
 
 						<a href="main_SignUp.html" class="txt2 bo1">
-							Sign up now
+							Daftar Sekarang
 						</a>
 			
 			
