--- a/main_SignIn.html
+++ b/main_SignIn.html
@@ -74,12 +74,12 @@
 			
 			
 						<script language="javascript">
-							function check(form)/*function to check userid & password*/
+							function check(form)/*function untuk cek userid & password*/
 							{
-							 /*the following code checkes whether the entered userid and password are matching*/
+							 /*kode berikut memeriksa apakah userid dan kata sandi yang dimasukkan cocok*/
 							 if(form.userid.value == "admin" && form.pswrd.value == "admin")
 							  {
-								window.open ('home.html')/*opens the target page while Id & password matches*/
+								window.open ('home.html')/*membuka halaman target saat Id & password cocok*/
 							  }
 							 else
 							 {
